// Vitest Snapshot v1

exports[`getTitreFromTypeId fusions 1`] = `
{
  "apc": null,
  "aph": null,
  "apm": null,
  "apw": null,
  "arc": null,
  "arg": null,
  "arm": null,
  "axm": {
    "count": "single",
    "typeId": "arm",
  },
  "cxf": {
    "count": "multiple",
    "typeId": "cxf",
  },
  "cxg": {
    "count": "multiple",
    "typeId": "cxg",
  },
  "cxh": {
    "count": "multiple",
    "typeId": "cxh",
  },
  "cxi": {
    "count": "multiple",
    "typeId": "cxi",
  },
  "cxm": {
    "count": "multiple",
    "typeId": "cxm",
  },
  "cxr": {
    "count": "multiple",
    "typeId": "cxr",
  },
  "cxs": {
    "count": "multiple",
    "typeId": "cxs",
  },
  "cxw": {
    "count": "multiple",
    "typeId": "cxw",
  },
  "inh": null,
  "ini": null,
  "inm": null,
  "inr": null,
  "pcc": null,
  "prf": null,
  "prg": null,
  "prh": null,
  "pri": null,
  "prm": null,
  "prr": null,
  "prs": null,
  "prw": null,
  "pxf": null,
  "pxg": null,
  "pxh": null,
  "pxi": null,
  "pxm": {
    "count": "single",
    "typeId": "prm",
  },
  "pxr": null,
  "pxw": null,
}
`;

exports[`getTitreFromTypeId pas de fusions 1`] = `
{
  "apc": null,
  "aph": null,
  "apm": null,
  "apw": null,
  "arc": null,
  "arg": null,
  "arm": null,
  "axm": {
    "count": "single",
    "typeId": "arm",
  },
  "cxf": null,
  "cxg": null,
  "cxh": null,
  "cxi": null,
  "cxm": null,
  "cxr": null,
  "cxs": null,
  "cxw": null,
  "inh": null,
  "ini": null,
  "inm": null,
  "inr": null,
  "pcc": null,
  "prf": null,
  "prg": null,
  "prh": null,
  "pri": null,
  "prm": null,
  "prr": null,
  "prs": null,
  "prw": null,
  "pxf": null,
  "pxg": null,
  "pxh": null,
  "pxi": null,
  "pxm": {
    "count": "single",
    "typeId": "prm",
  },
  "pxr": null,
  "pxw": null,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres aut-97300-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres aut-mrae-guyane-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres dea-guadeloupe-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres dea-guyane-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": true,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres dea-martinique-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres dea-mayotte-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres dea-reunion-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres dre-aura-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres dre-bfc-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres dre-bretagne-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres dre-centre-val-de-loire-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres dre-corse-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres dre-grand-est-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres dre-hauts-de-france-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres dre-ile-de-france-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": true,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres dre-normandie-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres dre-nouvelle-aquitaine-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": true,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres dre-occitanie-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres dre-paca-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres dre-pays-de-la-loire-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres min-dajb-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres min-mctrct-dgcl-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres min-mtes-dgaln-01 1`] = `
{
  "apc": true,
  "aph": false,
  "apm": true,
  "apw": true,
  "arc": true,
  "arg": false,
  "arm": true,
  "axm": true,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": true,
  "cxm": true,
  "cxr": false,
  "cxs": false,
  "cxw": true,
  "inh": false,
  "ini": true,
  "inm": true,
  "inr": false,
  "pcc": true,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": true,
  "prm": true,
  "prr": false,
  "prs": false,
  "prw": true,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": true,
  "pxm": true,
  "pxr": false,
  "pxw": true,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres min-mtes-dgec-01 1`] = `
{
  "apc": false,
  "aph": true,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": true,
  "arm": false,
  "axm": false,
  "cxf": true,
  "cxg": true,
  "cxh": true,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": true,
  "cxw": false,
  "inh": true,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": true,
  "prg": true,
  "prh": true,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": true,
  "prw": false,
  "pxf": true,
  "pxg": true,
  "pxh": true,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres min-mtes-dgpr-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": true,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": true,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": true,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": true,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres ope-brgm-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres ope-brgm-02 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres ope-cacem-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres ope-onf-973-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": true,
  "axm": true,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres ope-ptmg-973-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": true,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-01053-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-02408-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-03190-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-04070-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-05061-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-06088-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-07186-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-08105-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-09122-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-2A004-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-2B033-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-10387-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-11069-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-12202-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-13203-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-14118-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-15014-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-16015-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-17300-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-18033-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-19272-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-21231-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-22278-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-23096-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-24322-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-25056-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-26362-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-27229-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-28085-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-29232-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-30189-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-31555-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-32013-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-33063-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-34172-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-35238-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-36044-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-37261-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-38185-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-39300-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-40192-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-41018-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-42218-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-43157-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-44109-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-45234-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-46042-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-47001-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-48095-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-49007-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-50502-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-51108-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-52121-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-53130-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-54395-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-55029-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-56260-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-57463-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-58194-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-59350-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-60057-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-61001-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-62041-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-63113-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-64445-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-65440-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-66136-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-67482-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-68066-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-69383-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-70550-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-71270-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-72181-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-73065-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-74010-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-75104-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-76540-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-77288-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-78646-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-79191-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-80021-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-81004-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-82121-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-83137-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-84007-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-85191-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-86194-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-87085-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-88160-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-89024-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-90010-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-91228-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-92050-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-93008-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-94028-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-95127-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-97105-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-97209-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-97302-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-97411-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si un utilisateur administrateur admin %p peut créer des titres pre-97611-01 1`] = `
{
  "apc": false,
  "aph": false,
  "apm": false,
  "apw": false,
  "arc": false,
  "arg": false,
  "arm": false,
  "axm": false,
  "cxf": false,
  "cxg": false,
  "cxh": false,
  "cxi": false,
  "cxm": false,
  "cxr": false,
  "cxs": false,
  "cxw": false,
  "inh": false,
  "ini": false,
  "inm": false,
  "inr": false,
  "pcc": false,
  "prf": false,
  "prg": false,
  "prh": false,
  "pri": false,
  "prm": false,
  "prr": false,
  "prs": false,
  "prw": false,
  "pxf": false,
  "pxg": false,
  "pxh": false,
  "pxi": false,
  "pxm": false,
  "pxr": false,
  "pxw": false,
}
`;

exports[`vérifie si une entreprise peut créer un titre de type %p apc 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p aph 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p apm 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p apw 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p arc 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p arg 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p arm 1`] = `true`;

exports[`vérifie si une entreprise peut créer un titre de type %p axm 1`] = `true`;

exports[`vérifie si une entreprise peut créer un titre de type %p cxf 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p cxg 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p cxh 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p cxi 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p cxm 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p cxr 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p cxs 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p cxw 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p inh 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p ini 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p inm 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p inr 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p pcc 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p prf 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p prg 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p prh 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p pri 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p prm 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p prr 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p prs 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p prw 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p pxf 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p pxg 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p pxh 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p pxi 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p pxm 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p pxr 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p pxw 1`] = `false`;
